--- a/cnc_io_mcu/cnc_io_mcu.ioc
+++ b/cnc_io_mcu/cnc_io_mcu.ioc
@@ -1,236 +1,261 @@
 #MicroXplorer Configuration settings - do not modify
+File.Version=6
+GPIO.groupedBy=Group By Peripherals
+KeepUserPlacement=false
 Mcu.Family=STM32F1
-ProjectManager.MainLocation=Core/Src
-RCC.MCOFreq_Value=72000000
-SPI2.VirtualNSS=VM_NSSHARD
-ProjectManager.KeepUserCode=true
-Mcu.UserName=STM32F103C8Tx
-SPI2.VirtualType=VM_MASTER
-RCC.PLLCLKFreq_Value=72000000
-PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
-PA12.GPIOParameters=GPIO_Label
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI2_Init-SPI2-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
-PA11.GPIOParameters=GPIO_Label
-PA3.GPIOParameters=GPIO_Label
-RCC.ADCFreqValue=36000000
-PA6.GPIO_Label=D6
-PB0.GPIO_Label=COL0
-PB6.GPIO_Label=RS
-USART1.IPParameters=VirtualMode
-PB11.Signal=GPIO_Input
-PB13.Signal=SPI2_SCK
-PB15.Signal=SPI2_MOSI
-PA2.GPIOParameters=GPIO_Label
-PinOutPanel.RotationAngle=0
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-ProjectManager.StackSize=0x400
-PB5.GPIOParameters=GPIO_Label
-PD1-OSC_OUT.Signal=RCC_OSC_OUT
-Mcu.IP4=USART1
-RCC.FCLKCortexFreq_Value=72000000
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
 Mcu.IP2=SPI2
 Mcu.IP3=SYS
-PA15.GPIO_Label=ROW3
-PB4.GPIOParameters=GPIO_Label
-Mcu.IP0=NVIC
-PA12.Locked=true
-Mcu.IP1=RCC
-PA12.Signal=GPIO_Output
-Mcu.UserConstants=
-Mcu.ThirdPartyNb=0
-RCC.HCLKFreq_Value=72000000
+Mcu.IP4=USART1
 Mcu.IPNb=5
-ProjectManager.PreviousToolchain=STM32CubeIDE
-RCC.APB2TimFreq_Value=72000000
-PB6.Signal=GPIO_Output
+Mcu.Name=STM32F103C(8-B)Tx
+Mcu.Package=LQFP48
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PB0
+Mcu.Pin14=PB1
+Mcu.Pin15=PB10
+Mcu.Pin16=PB11
+Mcu.Pin17=PB12
+Mcu.Pin18=PB13
+Mcu.Pin19=PB14
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PB15
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PA15
+Mcu.Pin28=PB4
+Mcu.Pin29=PB5
+Mcu.Pin3=PD0-OSC_IN
+Mcu.Pin30=PB6
+Mcu.Pin31=PB7
+Mcu.Pin32=PB8
+Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin4=PD1-OSC_OUT
+Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-RCC.AHBFreq_Value=72000000
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PC14-OSC32_IN
-GPIO.groupedBy=
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin3=PD0-OSC_IN
-Mcu.Pin4=PD1-OSC_OUT
-PA0-WKUP.GPIOParameters=GPIO_Label
-Mcu.Pin5=PA0-WKUP
-ProjectManager.ProjectBuild=false
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA4.Locked=true
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-RCC.PLLMUL=RCC_PLL_MUL9
-ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.2
-MxDb.Version=DB.6.0.0
-PB0.GPIOParameters=GPIO_Label
-PA1.GPIOParameters=GPIO_Label
-ProjectManager.BackupPrevious=false
-PC14-OSC32_IN.Mode=LSE-External-Oscillator
-PA14.Mode=Serial_Wire
-PB14.Mode=Full_Duplex_Master
-PB1.GPIO_Label=COL1
-File.Version=6
-PA10.GPIO_Label=ROW0
-SPI2.CalculateBaudRate=18.0 MBits/s
-PB7.Signal=GPIO_Output
-PB8.Locked=true
-PB6.Locked=true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PB6.GPIOParameters=GPIO_Label
-ProjectManager.HalAssertFull=false
-PB0.Locked=true
-ProjectManager.ProjectName=cnc_io_mcu
-RCC.PLLMCOFreq_Value=36000000
-PB7.GPIO_Label=CS
-Mcu.Package=LQFP48
-PB1.Signal=GPIO_Input
-PA6.Signal=GPIO_Output
-PB12.Mode=NSS_Signal_Hard_Input
-PA7.Locked=true
-PA5.Locked=true
-SPI2.Mode=SPI_MODE_MASTER
-ProjectManager.ToolChainLocation=
-PA2.GPIO_Label=D2
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-PA10.Signal=GPIO_Output
-PA15.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=WR
-RCC.APB1TimFreq_Value=72000000
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-SPI2.Direction=SPI_DIRECTION_2LINES
-PB10.GPIOParameters=GPIO_Label
-PB13.Mode=Full_Duplex_Master
-PA4.GPIO_Label=D4
-ProjectManager.CustomerFirmwarePackage=
-PB4.Signal=GPIO_Analog
-PA3.Signal=GPIO_Output
-PA2.Locked=true
-PA6.GPIOParameters=GPIO_Label
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-PC15-OSC32_OUT.Mode=LSE-External-Oscillator
-ProjectManager.ProjectFileName=cnc_io_mcu.ioc
-PB8.GPIOParameters=GPIO_Label
-PD1-OSC_OUT.Mode=HSE-External-Oscillator
-PA15.GPIOParameters=GPIO_Label
 Mcu.PinsNb=34
-ProjectManager.NoMain=false
-PB11.GPIO_Label=COL3
-PC13-TAMPER-RTC.Signal=GPIO_Output
-PA11.GPIO_Label=ROW1
-ProjectManager.DefaultFWLocation=true
-PD0-OSC_IN.Signal=RCC_OSC_IN
-ProjectManager.DeletePrevious=true
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-PC14-OSC32_IN.Signal=RCC_OSC32_IN
-PB10.Locked=true
-PA12.GPIO_Label=ROW2
-RCC.FamilyName=M
-PA0-WKUP.GPIO_Label=D0
-PA0-WKUP.Signal=GPIO_Output
-PA0-WKUP.Locked=true
-PA13.Signal=SYS_JTMS-SWDIO
-PB8.GPIO_Label=RST
-PA15.Locked=true
-PA11.Locked=true
-PA9.Mode=Half_duplex(single_wire_mode)
-ProjectManager.TargetToolchain=STM32CubeIDE
-PB10.GPIO_Label=COL2
-PB7.GPIOParameters=GPIO_Label
-PA9.Signal=USART1_TX
-PB11.GPIOParameters=GPIO_Label
-PB5.Locked=true
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler
-ProjectManager.RegisterCallBack=
-PC13-TAMPER-RTC.Locked=true
-RCC.USBFreq_Value=72000000
-PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PA1.Signal=GPIO_Output
-PB1.Locked=true
-PD0-OSC_IN.Mode=HSE-External-Oscillator
-PB10.Signal=GPIO_Input
-PB14.Signal=SPI2_MISO
-PA5.Signal=GPIO_Output
-board=custom
-ProjectManager.LastFirmware=true
-PC13-TAMPER-RTC.GPIO_Label=LED
-PB15.Mode=Full_Duplex_Master
-RCC.VCOOutput2Freq_Value=8000000
-RCC.APB2Freq_Value=72000000
+Mcu.ThirdPartyNb=0
+Mcu.UserConstants=
+Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.0.1
-PB4.GPIO_Label=RD
-Mcu.Pin30=PB6
-PA1.GPIO_Label=D1
-PA10.GPIOParameters=GPIO_Label
-VP_SYS_VS_Systick.Mode=SysTick
-Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin31=PB7
-Mcu.Pin32=PB8
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA4.GPIOParameters=GPIO_Label
-PA13.Mode=Serial_Wire
-ProjectManager.FreePins=false
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
-ProjectManager.AskForMigrate=true
-Mcu.Name=STM32F103C(8-B)Tx
-Mcu.Pin26=PA14
-Mcu.Pin27=PA15
-PA2.Signal=GPIO_Output
-Mcu.Pin24=PA12
-ProjectManager.UnderRoot=true
-Mcu.Pin25=PA13
-Mcu.Pin28=PB4
-Mcu.Pin29=PB5
-ProjectManager.CoupleFile=false
-PB4.Locked=true
-PA4.Signal=GPIO_Output
-RCC.SYSCLKFreq_VALUE=72000000
-Mcu.Pin22=PA10
-PB5.Signal=GPIO_Output
-Mcu.Pin23=PA11
-RCC.TimSysFreq_Value=72000000
-PA7.GPIO_Label=D7
-PA1.Locked=true
-Mcu.Pin20=PB15
-Mcu.Pin21=PA9
-PA3.Locked=true
-PA5.GPIO_Label=D5
-PA10.Locked=true
+MxDb.Version=DB.6.0.0
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
-KeepUserPlacement=false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-USART1.VirtualMode=VM_ASYNC
-ProjectManager.CompilerOptimize=6
-PA11.Signal=GPIO_Output
-PA14.Signal=SYS_JTCK-SWCLK
-ProjectManager.HeapSize=0x200
-Mcu.Pin15=PB10
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PB11
-Mcu.Pin13=PB0
-Mcu.Pin14=PB1
-Mcu.Pin19=PB14
-ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PB12
-Mcu.Pin18=PB13
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin10=PA5
-PB7.Locked=true
-PB8.Signal=GPIO_Output
-RCC.APB1Freq_Value=36000000
-PB0.Signal=GPIO_Input
-PA7.GPIOParameters=GPIO_Label
-PB11.Locked=true
-ProjectManager.DeviceId=STM32F103C8Tx
-PB12.Signal=SPI2_NSS
-ProjectManager.LibraryCopy=1
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_Speed,GPIO_Label
+PA0-WKUP.GPIO_Label=D0
+PA0-WKUP.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPIO_Output
+PA1.GPIOParameters=GPIO_Speed,GPIO_Label
+PA1.GPIO_Label=D1
+PA1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA1.Locked=true
+PA1.Signal=GPIO_Output
+PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PA10.GPIO_Label=ROW0
+PA10.GPIO_PuPd=GPIO_PULLDOWN
+PA10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA10.Locked=true
+PA10.Signal=GPIO_Output
+PA11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PA11.GPIO_Label=ROW1
+PA11.GPIO_PuPd=GPIO_PULLDOWN
+PA11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA12.GPIO_Label=ROW2
+PA12.GPIO_PuPd=GPIO_PULLDOWN
+PA12.Locked=true
+PA12.Signal=GPIO_Output
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA15.GPIO_Label=ROW3
+PA15.GPIO_PuPd=GPIO_PULLDOWN
+PA15.Locked=true
+PA15.Signal=GPIO_Output
+PA2.GPIOParameters=GPIO_Speed,GPIO_Label
+PA2.GPIO_Label=D2
+PA2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA2.Locked=true
+PA2.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Speed,GPIO_Label
 PA3.GPIO_Label=D3
-PB1.GPIOParameters=GPIO_Label
-PA7.Signal=GPIO_Output
+PA3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA3.Locked=true
+PA3.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Speed,GPIO_Label
+PA4.GPIO_Label=D4
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Speed,GPIO_Label
+PA5.GPIO_Label=D5
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Speed,GPIO_Label
+PA6.GPIO_Label=D6
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA6.Locked=true
+PA6.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Speed,GPIO_Label
+PA7.GPIO_Label=D7
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA7.Locked=true
+PA7.Signal=GPIO_Output
+PA9.Mode=Half_duplex(single_wire_mode)
+PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB0.GPIO_Label=COL3
+PB0.GPIO_PuPd=GPIO_PULLDOWN
+PB0.Locked=true
+PB0.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB1.GPIO_Label=COL2
+PB1.GPIO_PuPd=GPIO_PULLDOWN
+PB1.Locked=true
+PB1.Signal=GPIO_Input
+PB10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB10.GPIO_Label=COL1
+PB10.GPIO_PuPd=GPIO_PULLDOWN
+PB10.Locked=true
+PB10.Signal=GPIO_Input
+PB11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB11.GPIO_Label=COL0
+PB11.GPIO_PuPd=GPIO_PULLDOWN
+PB11.Locked=true
+PB11.Signal=GPIO_Input
+PB12.Mode=NSS_Signal_Hard_Input
+PB12.Signal=SPI2_NSS
+PB13.Mode=Full_Duplex_Master
+PB13.Signal=SPI2_SCK
+PB14.Mode=Full_Duplex_Master
+PB14.Signal=SPI2_MISO
+PB15.Mode=Full_Duplex_Master
+PB15.Signal=SPI2_MOSI
+PB4.GPIOParameters=GPIO_Speed,GPIO_Label
+PB4.GPIO_Label=RD
+PB4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Speed,GPIO_Label
+PB5.GPIO_Label=WR
+PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Speed,GPIO_Label
+PB6.GPIO_Label=RS
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Speed,GPIO_Label
+PB7.GPIO_Label=CS
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB7.Locked=true
+PB7.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Speed,GPIO_Label
+PB8.GPIO_Label=RST
+PB8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
+PC13-TAMPER-RTC.GPIO_Label=LED
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.Signal=GPIO_Output
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PD0-OSC_IN.Mode=HSE-External-Oscillator
+PD0-OSC_IN.Signal=RCC_OSC_IN
+PD1-OSC_OUT.Mode=HSE-External-Oscillator
+PD1-OSC_OUT.Signal=RCC_OSC_OUT
+PinOutPanel.RotationAngle=0
+ProjectManager.AskForMigrate=true
+ProjectManager.BackupPrevious=false
+ProjectManager.CompilerOptimize=6
+ProjectManager.ComputerToolchain=false
+ProjectManager.CoupleFile=false
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
+ProjectManager.DeletePrevious=true
+ProjectManager.DeviceId=STM32F103C8Tx
+ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.2
+ProjectManager.FreePins=false
+ProjectManager.HalAssertFull=false
+ProjectManager.HeapSize=0x200
+ProjectManager.KeepUserCode=true
+ProjectManager.LastFirmware=true
+ProjectManager.LibraryCopy=1
+ProjectManager.MainLocation=Core/Src
+ProjectManager.NoMain=false
+ProjectManager.PreviousToolchain=STM32CubeIDE
+ProjectManager.ProjectBuild=false
+ProjectManager.ProjectFileName=cnc_io_mcu.ioc
+ProjectManager.ProjectName=cnc_io_mcu
+ProjectManager.RegisterCallBack=
+ProjectManager.StackSize=0x400
+ProjectManager.TargetToolchain=STM32CubeIDE
+ProjectManager.ToolChainLocation=
+ProjectManager.UnderRoot=true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI2_Init-SPI2-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
+RCC.ADCFreqValue=36000000
+RCC.AHBFreq_Value=72000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=36000000
+RCC.APB1TimFreq_Value=72000000
+RCC.APB2Freq_Value=72000000
+RCC.APB2TimFreq_Value=72000000
+RCC.FCLKCortexFreq_Value=72000000
+RCC.FamilyName=M
+RCC.HCLKFreq_Value=72000000
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,USBPrescaler,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=72000000
+RCC.PLLCLKFreq_Value=72000000
+RCC.PLLMCOFreq_Value=36000000
+RCC.PLLMUL=RCC_PLL_MUL9
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.SYSCLKFreq_VALUE=72000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TimSysFreq_Value=72000000
+RCC.USBFreq_Value=48000000
+RCC.USBPrescaler=RCC_USBCLKSOURCE_PLL_DIV1_5
+RCC.VCOOutput2Freq_Value=8000000
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI2.CalculateBaudRate=18.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualNSS=VM_NSSHARD
+SPI2.VirtualType=VM_MASTER
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+board=custom
+isbadioc=false
